[gd_scene load_steps=5 format=3 uid="uid://b1oa5ii74hgb1"]

[ext_resource type="Texture2D" uid="uid://cq6nrg6h5sc3r" path="res://assets/objects/safe_closed.png" id="1_8pjyx"]
[ext_resource type="Script" path="res://game/objects/safe.gd" id="1_cca5r"]
[ext_resource type="Theme" uid="uid://bg721ml30kggd" path="res://assets/themes/hint_label_theme.tres" id="2_74j2y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ei0uj"]
radius = 48.0
height = 124.0

[node name="Safe" type="Area2D"]
script = ExtResource("1_cca5r")
correct_code = Array[int]([4, 5, 1])

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_8pjyx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 17)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ei0uj")

[node name="Label" type="Label" parent="."]
z_index = 10
offset_left = -49.0
offset_top = -52.0
offset_right = 49.0
offset_bottom = -29.0
theme = ExtResource("2_74j2y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
z_index = 10
offset_left = -69.0
offset_top = -40.0
offset_right = 69.0
offset_bottom = -16.9999
theme = ExtResource("2_74j2y")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
